--- a/app/templates/login_safe.html
+++ b/app/templates/login_safe.html
@@ -65,7 +65,7 @@
                         
                         <div class="mt-4">
                             <div class="alert alert-info">
-                                <strong>Try the same SQL Injection:</strong> Use <code>' OR '1'='1</code> as username and any password. It won't work!
+                                <strong>Try the same SQL Injection:</strong> Use <code>admin' -- OR 1=1 '</code> as username and any password. It won't work!
                             </div>
                             <p>This login form is protected against SQL injection because it uses parameterized queries.</p>
                             <p>The safe code looks like this:</p>
