--- a/app/templates/how_it_works.html
+++ b/app/templates/how_it_works.html
@@ -24,9 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/login_safe">Safe Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/products">Products Search</a>
-                    </li>
+                    <!-- <li class="nav-item"> -->
+                    <!--     <a class="nav-link" href="/products">Products Search</a> -->
+                    <!-- </li> -->
                     <li class="nav-item">
                         <a class="nav-link active" href="/how-it-works">How It Works</a>
                     </li>
