--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,5 @@
 {% extends "base.html" %}
-
 {% block title %}{{ g.get_text('vulnerable_login') }} - {{ g.get_text('app_name') }}{% endblock %}
-
 {% block content %}
 <div class="row">
     <div class="col-md-6">
@@ -28,4 +26,45 @@
             </div>
         </div>
     </div>
-    
+
+    <div class="col-md-6">
+        <div class="card mb-4">
+            <div class="card-header bg-info text-white">
+                <h5 class="mb-0">{{ g.get_text('sql_injection_info') }}</h5>
+            </div>
+            <div class="card-body">
+                <p>{{ g.get_text('sql_injection_explanation') }}</p>
+                
+                <div class="alert alert-info">
+                    <h6>{{ g.get_text('examples') }}:</h6>
+                    <ul>
+                        <li><code>' OR '1'='1</code></li>
+                        <li><code>' OR '1'='1' --</code></li>
+                        <li><code>admin' --</code></li>
+                    </ul>
+                </div>
+                
+                <p>{{ g.get_text('educational_purpose_only') }}</p>
+                
+                <a href="{{ url_for('login_secure') }}" class="btn btn-success">
+                    <i class="fas fa-shield-alt"></i> {{ g.get_text('try_secure_login') }}
+                </a>
+            </div>
+        </div>
+        
+        <div class="card">
+            <div class="card-header bg-secondary text-white">
+                <h5 class="mb-0">{{ g.get_text('prevention_tips') }}</h5>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>{{ g.get_text('use_parameterized_queries') }}</li>
+                    <li>{{ g.get_text('input_validation') }}</li>
+                    <li>{{ g.get_text('least_privilege_principle') }}</li>
+                    <li>{{ g.get_text('use_orm') }}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
