Removed products page from base.html

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,9 +51,9 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/login_safe' %}active{% endif %}" href="/login_safe">{{ g.get_text('safe_login') }}</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/products' %}active{% endif %}" href="/products">{{ g.get_text('products_search') }}</a>
-                    </li>
+                    <!-- <li class="nav-item"> -->
+                    <!--     <a class="nav-link {% if request.path == '/products' %}active{% endif %}" href="/products">{{ g.get_text('products_search') }}</a> -->
+                    <!-- </li> -->
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/how-it-works' %}active{% endif %}" href="/how-it-works">{{ g.get_text('how_it_works') }}</a>
                     </li>
