Remove products page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -51,7 +51,7 @@
                             <p>These pages contain vulnerable SQL code:</p>
                             <ul>
                                 <li><a href="/login">Login Form</a> - Vulnerable to authentication bypass</li>
-                                <li><a href="/products">Products Search</a> - Vulnerable to data extraction</li>
+                                <!-- <li><a href="/products">Products Search</a> - Vulnerable to data extraction</li> -->
                                 <li><a href="/users?id=1">User Profile</a> - Vulnerable to data manipulation</li>
                             </ul>
                         </div>
